# cairn

./: .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: project-definition.md
src/cairn/: config.py  main.py
src/cairn/api/: dependencies.py  schemas.py
src/cairn/credentials/: __init__.py  base.py  encryption.py  postgres.py
src/cairn/db/: connection.py
src/cairn/execution/: service.py
src/cairn/llm/: __init__.py  anthropic.py  base.py  openrouter.py
src/cairn/models/: __init__.py  agent.py  conversation.py  credential.py  provider.py  run.py  runtime.py  tool.py  trigger.py
src/cairn/orchestration/: __init__.py  builtin_tools.py  service.py  tools.py
src/cairn/runtime/: base.py  docker.py
src/cairn/scheduling/: __init__.py  scheduler.py
src/cairn/security/: __init__.py  base.py  (+2 more)
tests/: conftest.py  test_models.py  test_models_conversation.py  test_models_tool.py
tests/test_api/: test_health.py  test_tools.py  test_webhooks.py
tests/test_credentials/: test_encryption.py  test_postgres_store.py
tests/test_execution/: test_service.py
tests/test_llm/: test_anthropic.py  test_base.py  test_openrouter.py
tests/test_orchestration/: test_builtin_tools.py  test_service.py  test_tools.py
tests/test_runtime/: test_docker.py
tests/test_scheduling/: test_cron_validation.py  test_scheduler.py
tests/test_security/: test_credential_leak.py  test_pipeline.py  test_prompt_injection.py
web/: Dockerfile  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  styles.css
(+44 files in other folders)
